--- a/1.html
+++ b/1.html
@@ -93,7 +93,9 @@
         </g>
       </g>
     </svg>
-
+    <div>
+      ::CLOUDFLARE_ERROR_500S_BOX::
+    </div>
     <p>
       Please complete the security check to access this website.
     </p>
