--- a/country.html
+++ b/country.html
@@ -94,6 +94,10 @@
       </g>
     </svg>
 
+    <div>
+      ::GEO::
+    </div>
+
     <p>
       Please complete the security check to access this website.
     </p>
