--- a/basic.html
+++ b/basic.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1> 5XX Level Errors </h1>
-  <h2>::CLOUDFLARE_ERROR_500S_BOX::</h2>
+  <h2>::CAPTCHA_BOX::</h2>
 </body>
 </html>
