--- a/basic.html
+++ b/basic.html
@@ -3,6 +3,14 @@
  <head>
    <meta charset="utf-8">
     <title>5XX Level Errors page</title>
+  <style>
+   h1 {
+    display: none !important;
+}
+   div#footer-text {
+    display: none !important;
+}
+  </style>
 </head>
 <body>
   <h1> 5XX Level Errors </h1>
