Updated Image file Structure

--- a/ip-country.html
+++ b/ip-country.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
+        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
         <div class="message">You are not authorized to visit betpanda.io</div>
     </div>
 </body>
