--- a/500-class-error.html
+++ b/500-class-error.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
+        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
         <div class="message">::CLOUDFLARE_ERROR_500S_BOX::</div>
     </div>
 </body>
