--- a/waf-block.html
+++ b/waf-block.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
+        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
         <div class="message">Your request has been denied.</div>
     </div>
 </body>
