--- a/500-class-error.html
+++ b/500-class-error.html
@@ -41,6 +41,31 @@
             list-style: none;
             text-align: center;
         }
+
+        @media (max-width: 767px) {
+            body {
+                height: auto;
+                padding: 20px;
+            }
+
+            .container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .logo {
+                width: 250px;
+            }
+
+            .cf-error-details {
+                padding: 0;
+            }
+        }
+
+        ul {
+            padding: 0;
+        }
     </style>
 </head>
 
@@ -50,4 +75,5 @@
         <div class="message">::CLOUDFLARE_ERROR_500S_BOX::</div>
     </div>
 </body>
+
 </html>
