--- a/500-class-error.html
+++ b/500-class-error.html
@@ -73,6 +73,7 @@
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
         <div class="message">::CLOUDFLARE_ERROR_500S_BOX::</div>
+        <p>Please refresh the page or try again later.</p>
     </div>
 </body>
 
