--- a/ip-country.html
+++ b/ip-country.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,22 +18,44 @@
             font-family: Arial, sans-serif;
             text-align: center;
         }
+
         .container {
             text-align: center;
         }
+
         .logo {
             width: 250px;
         }
-        .message {
-            margin-top: 20px;
+
+        @media (max-width: 767px) {
+            body {
+                height: auto;
+                padding: 20px;
+            }
+
+            .container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .logo {
+                width: 250px;
+            }
+
+        }
+
+        p {
             font-size: 1.5em;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <div class="message">You are not authorized to visit betpanda.io</div>
+        <p>Sorry, betpanda.io is not available in your country or through your IP address.</p>
     </div>
 </body>
+
 </html>
