--- a/waf-block.html
+++ b/waf-block.html
@@ -17,14 +17,34 @@
             font-family: Arial, sans-serif;
             text-align: center;
         }
+
         .container {
             text-align: center;
         }
+
         .logo {
             width: 250px;
         }
-        .message {
-            margin-top: 20px;
+
+        @media (max-width: 767px) {
+            body {
+                height: auto;
+                padding: 20px;
+            }
+
+            .container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .logo {
+                width: 250px;
+            }
+
+        }
+
+        p {
             font-size: 1.5em;
         }
     </style>
@@ -32,7 +52,7 @@
 <body>
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <div class="message">Your request has been denied.</div>
+        <p class="message">Your request has been denied.</p>
     </div>
 </body>
 </html>
