--- a/1000-class-error.html
+++ b/1000-class-error.html
@@ -9,10 +9,9 @@
     <style>
         body {
             margin: 0;
-            height: 100vh;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column;
+            min-height: 100vh;
             background-color: #07182B;
             color: #fff;
             font-family: Arial, sans-serif;
@@ -20,11 +19,17 @@
         }
 
         .container {
-            text-align: center;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
         }
 
         .logo {
-            width: 250px;
+            max-width: 250px;
+            height: auto;
         }
 
         .message {
@@ -43,21 +48,6 @@
         }
 
         @media (max-width: 767px) {
-            body {
-                height: auto;
-                padding: 20px;
-            }
-
-            .container {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .logo {
-                width: 250px;
-            }
-
             .cf-error-details {
                 padding: 0;
             }
