--- a/ip-country.html
+++ b/ip-country.html
@@ -9,10 +9,9 @@
     <style>
         body {
             margin: 0;
-            height: 100vh;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column;
+            min-height: 100vh;
             background-color: #07182B;
             color: #fff;
             font-family: Arial, sans-serif;
@@ -20,29 +19,21 @@
         }
 
         .container {
-            text-align: center;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
         }
 
         .logo {
-            width: 250px;
+            max-width: 250px;
+            height: auto;
         }
 
-        @media (max-width: 767px) {
-            body {
-                height: auto;
-                padding: 20px;
-            }
-
-            .container {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .logo {
-                width: 250px;
-            }
-
+        ul {
+            padding: 0;
         }
 
         p {
