--- a/interactive-challenge-managed-i-am-under-attack.html
+++ b/interactive-challenge-managed-i-am-under-attack.html
@@ -33,7 +33,6 @@
         }
 
         .message {
-            margin-top: 20px;
             font-size: 1.5em;
         }
 
@@ -55,6 +54,14 @@
 
         ul {
             padding: 0;
+        }
+
+        div#footer-text {
+            display: none;
+        }
+
+        h1 {
+            display: none;
         }
     </style>
 </head>
