--- a/interactive-challenge-managed-i-am-under-attack.html
+++ b/interactive-challenge-managed-i-am-under-attack.html
@@ -69,7 +69,7 @@
 <body>
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <p>Verifying you are human. This may take a few seconds.</p>
+        <p>Verifying you are human automatically. This may take a few seconds.</p>
         <div class="message">::CAPTCHA_BOX::</div>
         <p>Please refresh the page if verification fails.</p>
     </div>
