Added javascript challenge page

--- a/country-with-challenge.html
+++ b/country-with-challenge.html
@@ -39,6 +39,14 @@
         p {
             font-size: 1.5em;
         }
+
+        div#footer-text {
+            display: none;
+        }
+
+        h1 {
+            display: none;
+        }
     </style>
 </head>
 
@@ -46,7 +54,7 @@
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
         <div>::CAPTCHA_BOX::</div>
-        <p>Sorry, betpanda.io is not available in your country or through your IP address.</p>
+        <p>Sorry, betpanda.io is not available in your country.</p>
     </div>
 </body>
 
