--- a/country-with-challenge.html
+++ b/country-with-challenge.html
@@ -32,28 +32,12 @@
             height: auto;
         }
 
-        .message {
-            font-size: 1.5em;
-        }
-
-        .cf-error-details {
-            padding-right: 300px;
-            padding-left: 300px;
-        }
-
-        .cf-error-details ul li {
-            list-style: none;
-            text-align: center;
-        }
-
-        @media (max-width: 767px) {
-            .cf-error-details {
-                padding: 0;
-            }
-        }
-
         ul {
             padding: 0;
+        }
+
+        p {
+            font-size: 1.5em;
         }
 
         div#footer-text {
@@ -62,6 +46,10 @@
 
         h1 {
             display: none;
+        }
+
+        .main-content {
+            font-size: 1.5em;
         }
     </style>
 </head>
