--- a/country-with-challenge.html
+++ b/country-with-challenge.html
@@ -6,59 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error Page</title>
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background-color: #07182B;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-
-        .container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-
-        .logo {
-            max-width: 250px;
-            height: auto;
-        }
-
-        ul {
-            padding: 0;
-        }
-
-        p {
-            font-size: 1.5em;
-        }
-
-        div#footer-text {
-            display: none;
-        }
-
-        h1 {
-            display: none;
-        }
-
-        .main-content {
-            font-size: 1.5em;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
         <div>::CAPTCHA_BOX::</div>
-        <p>Sorry, betpanda.io is not available in your country.</p>
+        <p class="main-para">Sorry, betpanda.io is not available in your country.</p>
     </div>
 </body>
 
