Added Loading Animation

--- a/ip-country.html
+++ b/ip-country.html
@@ -12,6 +12,10 @@
 <body>
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
+        <div class="preloader">
+            <span></span>
+            <span></span>
+          </div>
         <p class="main-para">Sorry, betpanda.io is not available in your country or through your IP address.</p>
     </div>
 </body>
