--- a/javascript-challenge.html
+++ b/javascript-challenge.html
@@ -12,6 +12,10 @@
 <body>
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
+        <div class="preloader">
+            <span></span>
+            <span></span>
+          </div>
         <p class="main-para">Verifying you are human automatically. This may take a few seconds.</p>
         <div class="message">::IM_UNDER_ATTACK_BOX::</div>
         <p>Please refresh the page if verification fails.</p>
