--- a/country-with-challenge.html
+++ b/country-with-challenge.html
@@ -12,6 +12,10 @@
 <body>
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
+        <div class="preloader">
+            <span></span>
+            <span></span>
+          </div>
         <div>::CAPTCHA_BOX::</div>
         <p class="main-para">Sorry, betpanda.io is not available in your country.</p>
     </div>
