--- a/waf-block.html
+++ b/waf-block.html
@@ -10,6 +10,10 @@
 <body>
     <div class="container">
         <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
+        <div class="preloader">
+            <span></span>
+            <span></span>
+          </div>
         <p class="message">Your request has been denied.</p>
     </div>
 </body>
