--- a/429-errors.html
+++ b/429-errors.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <p class="message">Your request has been denied.</p>
+        <img src="./images/logo_281490d63c.svg" alt="Logo" class="logo">
+        <p class="message">Your request has been rate limited.</p>
     </div>
 </body>
 </html>
