--- a/500-class-error.html
+++ b/500-class-error.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,13 @@
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="container">
-        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <p class="message">Your request has been rate limited.</p>
+        <img src="./images/logo_281490d63c.svg" alt="Logo" class="logo">
+        <div class="message">::CLOUDFLARE_ERROR_500S_BOX::</div>
+        <p>Please refresh the page or try again later.</p>
     </div>
 </body>
+
 </html>
