--- a/waf-block.html
+++ b/waf-block.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +7,10 @@
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
     <div class="container">
-        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <div class="message">::CLOUDFLARE_ERROR_1000S_BOX::</div>
-        <p>Please refresh the page or try again later.</p>
+        <img src="./images/logo_281490d63c.svg" alt="Logo" class="logo">
+        <p class="message">Your request has been denied.</p>
     </div>
 </body>
-
 </html>
