--- a/1000-class-error.html
+++ b/1000-class-error.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="container">
-        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <div class="message">::CLOUDFLARE_ERROR_500S_BOX::</div>
+        <img src="./images/logo_281490d63c.svg" alt="Logo" class="logo">
+        <div class="message">::CLOUDFLARE_ERROR_1000S_BOX::</div>
         <p>Please refresh the page or try again later.</p>
     </div>
 </body>
