--- a/country-with-challenge.html
+++ b/country-with-challenge.html
@@ -11,8 +11,10 @@
 
 <body>
     <div class="container">
-        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <p class="main-para">Sorry, betpanda.io is not available in your country or through your IP address.</p>
+        <img src="./images/logo_281490d63c.svg" alt="Logo" class="logo">
+        <img class="loader-img" src="./images/cr_loading_6a9f0f2899.png">
+        <div>::CAPTCHA_BOX::</div>
+        <p class="main-para">Sorry, cryptorino.io is not available in your country.</p>
     </div>
 </body>
 
