--- a/interactive-challenge-managed-i-am-under-attack.html
+++ b/interactive-challenge-managed-i-am-under-attack.html
@@ -11,13 +11,10 @@
 
 <body>
     <div class="container">
-        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <div class="preloader">
-            <span></span>
-            <span></span>
-          </div>
+        <img src="./images/logo_281490d63c.svg" alt="Logo" class="logo">
+        <img class="loader-img" src="./images/cr_loading_6a9f0f2899.png">
         <p class="main-para">Verifying you are human automatically. This may take a few seconds.</p>
-        <div class="message">::IM_UNDER_ATTACK_BOX::</div>
+        <div class="message">::CAPTCHA_BOX::</div>
         <p>Please refresh the page if verification fails.</p>
     </div>
 </body>
