--- a/ip-country.html
+++ b/ip-country.html
@@ -11,13 +11,8 @@
 
 <body>
     <div class="container">
-        <img src="./images/Betpanda-logo-loader.svg" alt="Logo" class="logo">
-        <div class="preloader">
-            <span></span>
-            <span></span>
-          </div>
-        <div>::CAPTCHA_BOX::</div>
-        <p class="main-para">Sorry, betpanda.io is not available in your country.</p>
+        <img src="./images/logo_281490d63c.svg" alt="Logo" class="logo">
+        <p class="main-para">Sorry, cryptorino.io is not available in your country or through your IP address.</p>
     </div>
 </body>
 
